fix: improve code
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>